# ProceduralMapGeneration

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  samples.xml
Report/: .Rhistory  Wave Function Collapse.Rmd  Wave_Function_Collapse.html
World/: block.vox  data.xml  grass.vox  ground.vox  hat.vox  line.vox  stairs.vox  turn.vox  upBridge.vox  water.vox
World2/: block2door.vox  blockT.vox  blockTurn.vox  bridgeLine.vox  bridgeT.vox  data.xml  floorUp.vox  grass.vox  ground.vox  hat.vox  line.vox  pig.vox  turn.vox  upBridgeDown.vox  upBridgeUp.vox  water.vox
lib/bitmap/: CMakeLists.txt
lib/pugiXML/: CMakeLists.txt
src/: CMakeLists.txt  bezier.cpp  bezier.h  cube.frag  cube.vert  depth.vert  earth.frag  earth.vert  frame.h  main.cpp  model.cpp  model.h  path.h  phong.frag  phong.vert  shader.cpp  shader.h  solar_viewer.cpp  solar_viewer.h  texture.cpp  utils.cpp  utils.h  voxels.cpp  voxels.h
src/rendering/: World_Map.cpp  World_Map.h  World_Viewer.cpp  World_Viewer.h  cube.cpp  cube.h  glfw_window.cpp  glfw_window.h
